# Signature

./: CMakeLists.txt  Calculator.cpp  Calculator.h  Config.cpp  Config.h  Exceptions.h  MD5.cpp  MD5.h  Main.cpp
Task/: Description.txt
